--- a/AppPedagio2/MainPage.xaml
+++ b/AppPedagio2/MainPage.xaml
@@ -1,36 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppPedagio2.MainPage">
+             x:Class="AppPedagio2.MainPage"
+             Title="Pedagio">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+    <ContentPage.Resources>
+        <Style TargetType="Label">
+            <Setter Property="VerticalTextAlignment" Value="Center"/>
+            <Setter Property="VerticalOptions" Value="FillAndExpand"/>
+        </Style>
+    </ContentPage.Resources>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Listar Pedagios" Clicked="ToolbarItem_Clicked_Listar"/>
+        <ToolbarItem Text="Adicionar Pedagio" Clicked="ToolbarItem_Clicked_Add"/>
+        <ToolbarItem Text="Calcular Pedagio" Clicked="ToolbarItem_Clicked_Calcular"/>
+    </ContentPage.ToolbarItems>
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+    <ContentPage.Content>
+        <VerticalStackLayout>
+            <SearchBar x:Name="txt_search" 
+                       Margin="-10,0,0,0" 
+                       Placeholder="Busca de Pedagios" 
+                       TextChanged="txt_search_TextChanged"/>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+            <RefreshView x:Name="ref_carregando" 
+                         IsRefreshing="False" 
+                         Refreshing="ref_carregando_Refreshing"/>
+
+            <ListView x:Name="lst_Pedagio"
+                      ItemSelected="lst_Pedagio_ItemSelected">
+                
+                <ListView.Header>
+                    <Grid ColumnDefinitions="5*,*,*,*,*">
+                        <Label Grid.Column="1" Text="Origem"/>
+                        <Label Grid.Column="2" Text="Origem"/>
+                        <Label Grid.Column="3" Text="Origem"/>
+                        <Label Grid.Column="4" Text="Origem"/>
+                        <Label Grid.Column="5" Text="Origem"/>
+                    </Grid>
+                </ListView.Header>
+                
+            </ListView>
         </VerticalStackLayout>
-    </ScrollView>
+    </ContentPage.Content>
 
 </ContentPage>
